typescript/checker/tests/conformance/es6/yieldExpressions/YieldExpression17_es6.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression17_es6.ts:2:29
  |
2 | var v = { get foo() { yield foo; } }
  |                             ^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression17_es6.ts:2:23
  |
2 | var v = { get foo() { yield foo; } }
  |                       ^^^^^

